force-app/main/default/objects/Account/fields/Numbe_of_Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Numbe_of_Open_Tasks__c</fullName>
    <label>Numbe of Open Tasks</label>
    <length>5</length>
    <type>Text</type>
</CustomField>