force-app/main/default/objects/Account/fields/Number_of_Closed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Closed_Tasks__c</fullName>
    <label>Number of Closed Tasks</label>
    <length>5</length>
    <type>Text</type>
</CustomField>