force-app/main/default/objects/Account/fields/Old_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner_Name__c</fullName>
    <label>Old_Owner_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>