force-app/main/default/objects/Account/fields/topOpportunity__c.field-meta.xml
<CustomField>
    <fullName>topOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>